# cong

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_run.bat  run.bat
.ProjectFiles/: samurai.aseprite
.ProjectFiles/samurai/: samurai.aseprite
.ProjectFiles/ui/: ui.aseprite
cmake/sdl2/: FindSDL2.cmake
include/: animation.h  controller.h  controls.h  debug.h  defs.h  draw.h  enemy.h  events.h  game.h  global.h  player.h  pong.h  puck.h  rand.h  render.h  sprite.h  states.h  timing.h  ui.h  window.h
src/: animation.c  controller.c  controls.c  debug.c  draw.c  enemy.c  events.c  game.c  global.c  main.c  player.c  pong.c  puck.c  rand.c  render.c  sprite.c  timing.c  ui.c  window.c
src/res/: cong.rc  cong.res  cong_ico.xcf
src/res/images/backgrounds/: background1.xcf
